<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Task Splitter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_group">Create Group</string>
    <string name="my_groups">My Groups</string>
    <string name="groupname_hint">Group Name</string>
    <string name="join_group">Join Group</string>
    <string name="access_code_hint">Access Code</string>
    <string name="sign_in">Sign In</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="register">Register</string>
    <string name="name_hint">Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="mismatched_passwords">Passwords do not match.</string>
    <string name="empty_input_fields">Please fill out all fields.</string>
    <string name="username_regex">^[a-zA-Z0-9]*$</string>
    <string name="username_incorrect_input">Username must be composed of only letters and numbers.</string>
    <string name="name_regex">^[a-zA-Z \'-]*$</string>
    <string name="name_incorrect_input">Are you sure you entered your name correctly?</string>
    <string name="groupname_regex">^[a-zA-Z0-9 ]*$</string>
    <string name="groupname_incorrect_input">Group name must be composed of only letters and numbers.</string>
    <string name="username_taken">Username already taken.  Please choose a new username</string>
    <string name="sign_out">Sign Out</string>
    <string name="incorrect_group_login">Incorrect group name or access code</string>
    <string name="group_created_toast">Group created.</string>
    <string name="group_joined_toast">Group joined.</string>
    <string name="user_registration_completed_toast">User registration completed.</string>
    <string name="incorrect_user_login">Incorrect username or password.</string>
    <string name="sign_in_successful_toast">Sign in successful.</string>
    <string name="sign_out_toast">You have been successfully signed out.</string>
    <string name="not_logged_in_toast">You are not signed in.</string>
    <string name="password_too_short">Password must be between %1$d and %2$d characters long.</string>
    <string name="username_too_short">Username must be between %1$d and %2$d characters long.</string>
    <string name="create_task">Create Task</string>
    <string name="title_activity_my_groups">MyGroupsActivity</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="task_name_hint">Task Name</string>
    <string name="group">Group</string>
    <string name="assign_to">Assign To</string>
    <string name="description_hint">Description</string>
    <string name="deadline_hint">Deadline</string>
    <string name="title_activity_start_page">StartPageActivity</string>
    <string name="not_in_any_groups">You are not in any groups.</string>
    <string name="task_created">Task created.</string>
    <string name="taskname_empty">Please fill out the task name.</string>
    <string name="title_activity_user_tasks">UserTasksActivity</string>
    <string name="view_user_tasks">view user tasks</string>
    <string name="title_activity_right_drawer_base">RightDrawerBaseActivity</string>
    <string name="title_activity_group_page">GroupPageActivity</string>
    <string name="delete_task">Delete Task</string>
    <string name="archive_task">Archive Task</string>
    <string name="reassign_task">Reassign Task</string>
    <string name="title_activity_reassign">ReassignActivity</string>
    <string name="task_reassigned">Task has been reassigned.</string>
    <string name="task_archived">Task has been archived.</string>
    <string name="archived_tasks">Archived Tasks</string>
    <string name="no_user_tasks">No tasks here!</string>

</resources>
