<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/menu_create_task"
        android:title="@string/create_task"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/menu_create_group"
        android:title="@string/create_group"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_join_group"
        android:title="@string/join_group"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_my_groups"
        android:title="@string/my_groups"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_sign_out"
        android:title="@string/sign_out"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
