<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:clickable="false">

    <EditText
        android:layout_width="@dimen/input_field_width"
        android:layout_height="wrap_content"
        android:id="@+id/register_name_field"
        android:hint="@string/name_hint"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/input_field_top_margin"
        android:inputType="textCapWords|textPersonName"
        android:maxLength="@integer/max_length_name" />

    <EditText
        android:layout_width="@dimen/input_field_width"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/register_username_field"
        android:hint="@string/username_hint"
        android:layout_below="@+id/register_name_field"
        android:layout_alignLeft="@+id/register_password_field"
        android:layout_alignStart="@+id/register_password_field"
        android:maxLength="@integer/max_length_username"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="@dimen/input_field_width"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/register_password_field"
        android:hint="@string/password_hint"
        android:layout_below="@+id/register_username_field"
        android:layout_alignLeft="@+id/register_name_field"
        android:layout_alignStart="@+id/register_name_field"
        android:password="false"
        android:maxLength="@integer/max_length_password" />

    <EditText
        android:layout_width="@dimen/input_field_width"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/register_confirm_password_field"
        android:hint="@string/confirm_password_hint"
        android:layout_below="@+id/register_password_field"
        android:layout_alignLeft="@+id/register_password_field"
        android:layout_alignStart="@+id/register_password_field"
        android:maxLength="@integer/max_length_password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register_button"
        android:layout_below="@+id/register_confirm_password_field"
        android:layout_alignRight="@+id/register_confirm_password_field"
        android:layout_alignEnd="@+id/register_confirm_password_field" />

</RelativeLayout>