<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:layout_width="@dimen/create_task_width"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/taskName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/input_field_top_margin"
        android:hint="@string/task_name_hint"
        android:maxLength="@integer/max_length_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/taskDescription"
        android:layout_below="@+id/taskName"
        android:layout_alignLeft="@+id/taskName"
        android:layout_alignStart="@+id/taskName"
        android:layout_alignRight="@+id/taskName"
        android:layout_alignEnd="@+id/taskName"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/group"
        android:id="@+id/groupTextView"
        android:layout_below="@+id/taskDescription"
        android:layout_alignLeft="@+id/taskDescription"
        android:layout_alignStart="@+id/taskDescription" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/groupSpinner"
        android:layout_alignTop="@+id/groupTextView"
        android:layout_toRightOf="@+id/groupTextView"
        android:layout_toEndOf="@+id/groupTextView"
        android:layout_alignRight="@+id/taskDescription"
        android:layout_alignEnd="@+id/taskDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/assign_to"
        android:id="@+id/assignToTextView"
        android:layout_below="@+id/groupSpinner"
        android:layout_alignLeft="@+id/groupTextView"
        android:layout_alignStart="@+id/groupTextView" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/assignToSpinner"
        android:layout_below="@+id/groupSpinner"
        android:layout_toRightOf="@+id/assignToTextView"
        android:layout_toEndOf="@+id/assignToTextView"
        android:layout_alignRight="@+id/groupSpinner"
        android:layout_alignEnd="@+id/groupSpinner" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_task"
        android:id="@+id/create_task_button"
        android:layout_below="@+id/assignToSpinner"
        android:layout_alignRight="@+id/assignToSpinner"
        android:layout_alignEnd="@+id/assignToSpinner" />

</RelativeLayout>