<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        style="@style/editText"
        android:layout_width="@dimen/input_field_width"
        android:layout_height="wrap_content"
        android:id="@+id/join_group_name_field"
        android:hint="@string/groupname_hint"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/input_field_top_margin"
        android:maxLength="@integer/max_length_groupname"
        android:inputType="textPersonName" />

    <EditText
        style="@style/editText"
        android:layout_width="@dimen/input_field_width"
        android:layout_height="wrap_content"
        android:id="@+id/join_group_access_code_field"
        android:hint="@string/access_code_hint"
        android:inputType="text"
        android:layout_below="@+id/join_group_name_field"
        android:layout_alignLeft="@+id/join_group_name_field"
        android:layout_alignStart="@+id/join_group_name_field"
        android:maxLength="@integer/max_length_access_code" />

    <Button
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_group"
        android:id="@+id/join_group_button"
        android:layout_below="@+id/join_group_access_code_field"
        android:layout_alignRight="@+id/join_group_access_code_field"
        android:layout_alignEnd="@+id/join_group_access_code_field" />

</RelativeLayout>